// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PayoutHistoryTableItem renders correctly with actual values (eth) 1`] = `
<div class="payout-history-item">
  <div class="payout-history-item__header">
    <div class="payout-history-item__header__left-area">
      <div class="payout-history-item__header__left-area__expand-icon">
        <expandicon-stub></expandicon-stub>
      </div>
      <p>name1</p>
    </div>
    <p class="payout-history-item__header__total">$0.80</p>
  </div>
  <transition-stub name="fade" mode="in-out">
    <!---->
  </transition-stub>
</div>
`;

exports[`PayoutHistoryTableItem renders correctly with actual values (eth) 2`] = `
<div class="payout-history-item">
  <div class="payout-history-item__header">
    <div class="payout-history-item__header__left-area">
      <div class="payout-history-item__header__left-area__expand-icon">
        <expandicon-stub></expandicon-stub>
      </div>
      <p>name1</p>
    </div>
    <p class="payout-history-item__header__total">$0.80</p>
  </div>
  <transition-stub name="fade" mode="in-out">
    <div class="payout-history-item__expanded-area">
      <div class="payout-history-item__expanded-area__left-area">
        <div class="payout-history-item__expanded-area__left-area__info-area">
          <div class="payout-history-item__expanded-area__left-area__info-area__item flex-start">
            <p class="payout-history-item__expanded-area__left-area__info-area__item__label extra-margin">Node Age</p>
            <p class="payout-history-item__expanded-area__left-area__info-area__item__value">2 Months</p>
          </div>
          <div class="payout-history-item__expanded-area__left-area__info-area__item flex-start">
            <p class="payout-history-item__expanded-area__left-area__info-area__item__label extra-margin">Earned</p>
            <p class="payout-history-item__expanded-area__left-area__info-area__item__value">$0.10</p>
          </div>
          <div class="payout-history-item__expanded-area__left-area__info-area__item flex-end">
            <div class="row extra-margin">
              <p class="payout-history-item__expanded-area__left-area__info-area__item__label">Surge</p>
              <div class="payout-history-item__expanded-area__left-area__info-area__item__info-block">
                <p class="payout-history-item__expanded-area__left-area__info-area__item__info-block__text">140%</p>
              </div>
            </div>
            <p class="payout-history-item__expanded-area__left-area__info-area__item__value">$1.20</p>
          </div>
          <div class="payout-history-item__expanded-area__left-area__info-area__item flex-end">
            <div class="row extra-margin">
              <p class="payout-history-item__expanded-area__left-area__info-area__item__label">Held</p>
              <div class="payout-history-item__expanded-area__left-area__info-area__item__info-block">
                <p class="payout-history-item__expanded-area__left-area__info-area__item__info-block__text">75%</p>
              </div>
            </div>
            <p class="payout-history-item__expanded-area__left-area__info-area__item__value">$0.50</p>
          </div>
        </div>
        <div class="payout-history-item__expanded-area__left-area__footer">
          <!---->
          <!---->
        </div>
      </div>
      <div class="payout-history-item__expanded-area__right-area">
        <p class="payout-history-item__expanded-area__right-area__label flex-end">Paid</p>
        <div class="payout-history-item__expanded-area__right-area__info-item">
          <p class="payout-history-item__expanded-area__right-area__info-item__label">After Held</p>
          <p class="payout-history-item__expanded-area__right-area__info-item__value">$0.60</p>
        </div>
        <div class="payout-history-item__expanded-area__right-area__info-item">
          <p class="payout-history-item__expanded-area__right-area__info-item__label">Held Returned</p>
          <p class="payout-history-item__expanded-area__right-area__info-item__value">$0.20</p>
        </div>
        <div class="payout-history-item__expanded-area__right-area__info-item">
          <p class="payout-history-item__expanded-area__right-area__info-item__label">Distributed</p>
          <p class="payout-history-item__expanded-area__right-area__info-item__value">$0.30</p>
        </div>
        <div class="payout-history-item__expanded-area__right-area__divider"></div>
        <div class="payout-history-item__expanded-area__right-area__footer">
          <div class="payout-history-item__expanded-area__right-area__footer__transaction"><a href="https://etherscan.io/tx/0xreceipt1" target="_blank" rel="noreferrer noopener" class="payout-history-item__expanded-area__right-area__footer__transaction__link">
              Transaction
            </a>
            <shareicon-stub class="payout-history-item__expanded-area__right-area__footer__transaction__icon"></shareicon-stub>
          </div>
          <p class="payout-history-item__expanded-area__right-area__footer__total">$0.30</p>
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`PayoutHistoryTableItem renders correctly with actual values (zksync) 1`] = `
<div class="payout-history-item">
  <div class="payout-history-item__header">
    <div class="payout-history-item__header__left-area">
      <div class="payout-history-item__header__left-area__expand-icon">
        <expandicon-stub></expandicon-stub>
      </div>
      <p>name1</p>
    </div>
    <p class="payout-history-item__header__total">$0.80</p>
  </div>
  <transition-stub name="fade" mode="in-out">
    <div class="payout-history-item__expanded-area">
      <div class="payout-history-item__expanded-area__left-area">
        <div class="payout-history-item__expanded-area__left-area__info-area">
          <div class="payout-history-item__expanded-area__left-area__info-area__item flex-start">
            <p class="payout-history-item__expanded-area__left-area__info-area__item__label extra-margin">Node Age</p>
            <p class="payout-history-item__expanded-area__left-area__info-area__item__value">1 Month</p>
          </div>
          <div class="payout-history-item__expanded-area__left-area__info-area__item flex-start">
            <p class="payout-history-item__expanded-area__left-area__info-area__item__label extra-margin">Earned</p>
            <p class="payout-history-item__expanded-area__left-area__info-area__item__value">$0.10</p>
          </div>
          <div class="payout-history-item__expanded-area__left-area__info-area__item flex-end">
            <div class="row extra-margin">
              <p class="payout-history-item__expanded-area__left-area__info-area__item__label">Surge</p>
              <div class="payout-history-item__expanded-area__left-area__info-area__item__info-block">
                <p class="payout-history-item__expanded-area__left-area__info-area__item__info-block__text">140%</p>
              </div>
            </div>
            <p class="payout-history-item__expanded-area__left-area__info-area__item__value">$1.20</p>
          </div>
          <div class="payout-history-item__expanded-area__left-area__info-area__item flex-end">
            <div class="row extra-margin">
              <p class="payout-history-item__expanded-area__left-area__info-area__item__label">Held</p>
              <div class="payout-history-item__expanded-area__left-area__info-area__item__info-block">
                <p class="payout-history-item__expanded-area__left-area__info-area__item__info-block__text">75%</p>
              </div>
            </div>
            <p class="payout-history-item__expanded-area__left-area__info-area__item__value">$0.50</p>
          </div>
        </div>
        <div class="payout-history-item__expanded-area__left-area__footer">
          <!---->
          <!---->
        </div>
      </div>
      <div class="payout-history-item__expanded-area__right-area">
        <p class="payout-history-item__expanded-area__right-area__label flex-end">Paid</p>
        <div class="payout-history-item__expanded-area__right-area__info-item">
          <p class="payout-history-item__expanded-area__right-area__info-item__label">After Held</p>
          <p class="payout-history-item__expanded-area__right-area__info-item__value">$0.60</p>
        </div>
        <div class="payout-history-item__expanded-area__right-area__info-item">
          <p class="payout-history-item__expanded-area__right-area__info-item__label">Held Returned</p>
          <p class="payout-history-item__expanded-area__right-area__info-item__value">$0.20</p>
        </div>
        <div class="payout-history-item__expanded-area__right-area__info-item">
          <p class="payout-history-item__expanded-area__right-area__info-item__label">Distributed</p>
          <p class="payout-history-item__expanded-area__right-area__info-item__value">$0.30</p>
        </div>
        <div class="payout-history-item__expanded-area__right-area__divider"></div>
        <div class="payout-history-item__expanded-area__right-area__footer">
          <div class="payout-history-item__expanded-area__right-area__footer__transaction"><a href="https://zkscan.io/explorer/transactions/0xreceipt1" target="_blank" rel="noreferrer noopener" class="payout-history-item__expanded-area__right-area__footer__transaction__link">
              Transaction
            </a>
            <shareicon-stub class="payout-history-item__expanded-area__right-area__footer__transaction__icon"></shareicon-stub>
          </div>
          <p class="payout-history-item__expanded-area__right-area__footer__total">$0.30</p>
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;
